Removed overflow in the TextEditor. Panel fix. (#3840)

--- a/packages/theme/styles/_text-editor.scss
+++ b/packages/theme/styles/_text-editor.scss
@@ -8,7 +8,7 @@
 }
 
 .text-editor-view {
-  overflow-y: auto;
+  // overflow-y: auto;
   color: var(--theme-text-primary-color);
 
   .title,
